@@ -25,12 +25,13 @@
 package net.fabricmc.loom.util.gradle;
 
 import java.io.IOException;
+import java.util.Locale;
 
 import net.fabricmc.loom.util.IOStringConsumer;
 
 public record ThreadedSimpleProgressLogger(IOStringConsumer parent) implements IOStringConsumer {
 	@Override
 	public void accept(String data) throws IOException {
-		parent.accept("%d::%s".formatted(Thread.currentThread().getId(), data));
+		parent.accept(String.format(Locale.ENGLISH, "%d::%s", Thread.currentThread().getId(), data));
 	}
 }
